Sun Nov  9 02:05:33 2014  Tanaka Akira  <akr@fsij.org>

	* test/net/http/utils.rb: Don't connect to spawned server
	  before actual test.

Sun Nov  9 01:51:50 2014  Benoit Daloze  <eregontp@gmail.com>

	* object.c (Module#const_defined?): [DOC] Revise the documentation.
	  Patch by Xavier Noria.
	  [Fixes GH-754] https://github.com/ruby/ruby/pull/754

Sun Nov  9 00:37:44 2014  Tanaka Akira  <akr@fsij.org>

	* test/webrick: Examine log and use assert_join_threads.

Fri Nov  7 00:00:12 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/unicode_norm_gen.tmpl: expand kompatible_table so that
	  recursive expansion is not needed at runtime.

Thu Nov  6 23:58:40 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (pack_pack): escape unprintable characters and preserve
	  the encoding of warning message.

Thu Nov  6 23:55:18 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (sym_printable): QUOTE() should not raise an exception
	  even on invalid byte sequence.

Thu Nov  6 21:44:36 2014  Tanaka Akira  <akr@fsij.org>

	* test/test_unicode_normalize.rb: Rename TestNormalize to
	  TestUnicodeNormalize.
	  Define constants under TestUnicodeNormalize.

Thu Nov  6 21:22:59 2014  Tanaka Akira  <akr@fsij.org>

	* test/open-uri/test_open-uri.rb: Check empty webrick log.

Thu Nov  6 19:27:34 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (unescape_nonascii): cast -1 for the case char is unsigned char.
	  If char is signed char, for example gcc for ARM or ppc64, it caused
	  infinite loop.
	  http://kmuto.jp/build-ruby/arm/ruby-trunk/log/20141106T013005Z.fail.html.gz
	  http://rubyci.blob.core.windows.net/f19p8/ruby-trunk/log/20141106T090217Z.fail.html.gz

Thu Nov  6 09:53:18 2014  Eric Wong  <e@80x24.org>

	* lib/uri/rfc2396_parser.rb (initialize): reduce bytecode size
	  2088 => 1332 bytes on 32-bit x86

Thu Nov  6 08:49:49 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize/normalize.rb: Comment clarification.
